* Fix bug that occurs when attempting to validate any script on a non-running Script data source, causing it will get into a state where it cannot be re-validated or started
* Added DataSource lifecycle hooks for initializing and terminated

*Version 4.3.3*
* Upgrade library version to jssc 2.9.4
* Upgrade Jackson library version to 2.13.1
* Upgrade MySQL java connector library version to 8.0.27

*Version 4.3.2*
* Fixing a bug in the upgrading process coming from a legacy version (3.5.x) related to the permissions on the Email Event Handlers  

*Version 4.3.1*
* Fix bug in Multistate state event detector synchronization

*Version 4.3.0*
* Move Publisher points into separate table and add xid, name and enabled fields for better performance and control of publishers
* Importing a publisher with points from a previous version will only add new points, not update the existing points in the system this means only import once or delete the existing publisher prior to importing again
* Adding monitored values to the PointValueDaoSQL to track the number of point values saved (sync and async) per second.
* Adding a monitored metric for the PublishQueue size.
* Obscure original path/filename of image when inserting image into email
* Allow absolute paths for image paths in email templates
* Fix duplicate event count for Unacknowledged event summary
* Performance enhancement when calculating Unacknowledged event summary
* Change Script utility DataSourceQuery to require read permission to query for a data source, was previously edit permission
* Fix bug where nightly purge would fail to delete orphaned series ids if they didn't match the data point id
* Remove tracking latest alarm timestamp from EventManager
* Remove env property cache.users.size
* Cache all users in memory for performance, disable by setting cache.users.enabled=false (defaults to true)
* Set system permissions within a transaction to ensure any failures are rolled back and don't affect the runtime