@@ -410,9 +410,10 @@ serial.port.osx.path=/dev/
 serial.port.osx.regex=(cu|tty)..*
 #Number of bytes read events to queue up before discarding
 serial.port.eventQueueSize=10000
-#Rate at which to poll the serial port for new data in Linux (Windows uses interrupts)
-serial.port.linux.readPeriods=100
-serial.port.linux.readPeriodType=NANOSECONDS
+#Rate at which to poll the serial port for new data events in Linux (Windows uses interrupts)
+# this is only used by the Serial data source all others directly poll the port
+serial.port.linux.readPeriods=500
+serial.port.linux.readPeriodType=MILLISECONDS
 
 # Start data sources in parallel threads (default 1)
 #runtime.datasource.startupThreads=1
