@@ -12,6 +12,7 @@
 * Replace entire code-path between REST API and time series database to leverage AggregateDao streaming methods and enable support for pre-aggregating time-series databases
 * Fix bug that occurs when attempting to validate any script on a non-running Script data source, causing it will get into a state where it cannot be re-validated or started
 * Added DataSource lifecycle hooks for initializing and terminated
+* Remove peek method from SerialPortInputStream API
 
 *Version 4.3.3*
 * Upgrade library version to jssc 2.9.4
